# scratch_ml

./: CMakeLists.txt  README.md  main.c
include/: dataframe.h  linalg.h  linear_regression.h  logistic_regression.h
src/: CMakeLists.txt  base.c  dataframe.c  linalg.c  linear_regression.c  logistic_regression.c
tests/: CMakeLists.txt  test_linalg.c  test_linear_regression.c  test_logistic_regression.c
